@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-10-04" />
+<meta name="date" content="2010-10-07" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-10-04</td></tr>
+<td>2010-10-07</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -3518,6 +3518,14 @@ be used for indentation and inserts space
 characters of the amount of a tab width when
 tabs should be used for indentation.</td>
 </tr>
+<tr><td>Insert New Line Before Current</td>
+<td>&nbsp;</td>
+<td>Inserts a new line with indentation.</td>
+</tr>
+<tr><td>Insert New Line After Current</td>
+<td>&nbsp;</td>
+<td>Inserts a new line with indentation.</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -6256,7 +6264,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-10-07 14:02 UTC.
+Generated on: 2010-10-15 17:13 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
